styles/style.css
:root {
  --primary-color: rgb(49, 98, 141);
  --secondary-color: rgb(145, 25, 21);
  --third-color: rgb(158, 202, 226);
  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
}
body {
  padding-top: 100px;
  padding-bottom: 50px;
}
.hero {
  display: block;
  text-align: center;
  background-image: linear-gradient(var(--third-color), white);
  color: var(--primary-color);
}
.button-wrapper {
  padding-bottom: 5px;
  border-bottom: 1px solid var(--primary-color);
  background-color: white;
}
.nav-link {
  border: 1px var(--primary-color) solid;
  border-radius: 4px;
  color: var(--primary-color);
}
.alt-nav-link {
  background-color: whitesmoke;
}
h2 {
  text-align: center;
  padding-top: 10px;
  margin-top: 100px;
  color: var(--secondary-color);
}
.action-link {
  display: block;
  color: white;
  background-color: var(--primary-color);
  box-shadow: var(--box-shadow);
  padding: 10px;
  text-decoration: none;
  border-radius: 4px;
  text-align: center;
}
.action-link.home {
  width: 100%;
  float: right;
}
.action-link.blog {
  width: 20%;
}
.action-link.event {
  width: 50%;
  margin: 0;
  float: left;
}
.action-link:hover {
  color: var(--third-color);
}
@media (min-width: 900px) {
  .blog-content {
    margin-top: 40px;
    font-size: 18px;
  }
  .blog-image {
    margin-top: 40px;
  }
}
@media (max-width: 760px) {
  h1 {
    font-size: 30px !important;
  }
  h2 {
    font-size: 20px !important;
  }
  h3 {
    font-size: 20px !important;
  }
  h4 {
    font-size: 16px;
  }
  .nav-link {
    border: 0;
    text-align: left;
  }
  .alt-nav-link {
    background-color: transparent;
  }
  .action-link-home {
    font-size: 12px;
    padding: 5px;
  }
  .homepage-content {
    font-size: 12px !important;
    text-align: center;
  }
  .blog-content {
    width: 100%;
  }
  .action-link {
    padding: 5px;
    font-size: 12px;
  }
}
.contact-info {
  display: block;
  text-align: center;
  margin-top: 10px;
}
.contact-icon {
  font-size: 30px;
  margin: 0 20px;
}
.fa-facebook {
  color: rgb(76, 110, 245);
}
.source-links {
  font-family: monospace;
  font-size: 12px;
  margin-top: 40px;
}
.blog-content {
  padding: 0px;
}
.team-cell {
  margin: 20px;
}
h4 {
  text-align: center;
  margin: 0 20px;
  color: var(--primary-color);
}
.team-text {
  display: block;
  text-align: center;
  margin: 5px 20px;
}
.event {
  margin: 5px;
  border: 1px solid var(--primary-color);
  border-radius: 4px;
}

